# smart-ipv6-rotator

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py.example  poetry_to_requirements.py  pyproject.toml  requirements.txt  smart-ipv6-rotator-freebsd.py  smart-ipv6-rotator.py  testarg.py
.github/workflows/: build-docker.yml
smart_ipv6_rotator/: __init__.py  const.py  helpers.py  models.py  ranges.py
