[project]
name = "smart-ipv6-rotator"
version = "0.0.1"
dependencies = [
    "requests>=2.31.0",
    "pyroute2>=0.7.12",
    "click>=8.1.7",
]
authors = [
    {name = "FireMasterK"},
    {name = "TheFrenchGhosty"},
    {name = "WardPearce"}
]
description = "IPv6 rotator for specific subnets - unblock restrictions on IPv6 enabled websites"
readme = "README.md"

[project.scripts]
smart-ipv6-rotator = "smart_ipv6_rotator:main"