[project]
name = "smart-ipv6-rotator"
version = "1.0.0"
dependencies = [
    "requests>=2.31.0",
    "pyroute2>=0.7.12",
]
authors = [
    {name = "unixfox"},
    {name = "FireMasterK"},
    {name = "TheFrenchGhosty"},
    {name = "WardPearce"}
]
description = "IPv6 rotator for specific subnets - unblock restrictions on IPv6 enabled websites"
readme = "README.md"
