[project]
name = "smart-ipv6-rotator"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pyroute2>=0.9.1",
]
authors = [
    {name = "unixfox"},
    {name = "FireMasterK"},
    {name = "TheFrenchGhosty"},
    {name = "WardPearce"},
    {name = "vojkovic"}
]
description = "IPv6 rotator for specific subnets - unblock restrictions on IPv6 enabled websites"
readme = "README.md"
